--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description"
     content="Bridging the Aesthetic Gap: Training-Free Multi-Layer Transparent Image Generation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bridging the Aesthetic Gap: Training-Free Multi-Layer Transparent Image Generation
+  <title>PRISMLAYERS: Open Data for High-Quality Multi-Layer Transparent Image Generative Models
   </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -200,7 +200,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 ">Bridging the Aesthetic Gap: Training-Free Multi-Layer Transparent Image Generation</h1>
+            <h1 class="title is-1 ">PRISMLAYERS: Open Data for High-Quality Multi-Layer Transparent Image Generative Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://openreview.net/profile?id=~Yifan_Pu1">Junwen Chen</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
@@ -403,7 +403,7 @@
     </div>
 
     <div class="iframe-container">
-      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747817740346.svg" 
+      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747829538673.svg" 
               width="1480px" height="650px"></iframe>
     </div>
     
@@ -416,7 +416,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>
         @article{pu2025art,
-          title={Bridging the Aesthetic Gap: Training-Free Multi-Layer Transparent Image Generation}, 
+          title={PRISMLAYERS: Open Data for High-Quality Multi-Layer Transparent Image Generative Models}, 
           author={Junwen Chen and Heyang Jiang and Keming Wu and Ji Li and Chao Zhang and Keiji Yanai and Dong Chen and Yuhui Yuan},
           journal={arXiv preprint arXiv:xxx},
           year={2025},
