--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
               <span class="author-block">
                 <a href="https://openreview.net/profile?id=~Zhicong_Tang1">Keming Wu</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
               </span>
-              <!-- <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Yuxuan Luo</a>
+              <span class="author-block">
+                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Yanbin Wang</a>
                 &nbsp;&nbsp;&nbsp;
-              </span> -->
+              </span>
               <span class="author-block">
                 <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Ji Li</a>
                 &nbsp;&nbsp;&nbsp;
@@ -398,13 +398,15 @@
           <br>
           <p>Our MultiLayerFLUX composes multiple LayerFLUX-generated transparent layers according to a semantic layout—either extracted from a reference or produced by an LLM—ensuring precise spatial control and preserving each layer’s visual fidelity. We fine-tune ART with our synthesized data to improve its layer-wise aesthetic quality and overall visual appeal.</p>
           <br>
-          <p>TODO: Update latest results</p>
+          <!-- <p>TODO: Update latest results</p> -->
       </div>
     </div>
-
-    <div class="iframe-container">
-      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747829538673.svg" 
-              width="1480px" height="650px"></iframe>
+    <!-- width="1480px" height="650px"></iframe> -->
+    <div class="iframe-container">  
+      <!-- <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747829538673.svg"  -->
+      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747883526416.svg" 
+              width="1480px" height="1080"></iframe>
+              
     </div>
     
   </section>
