--- a/index.html
+++ b/index.html
@@ -221,28 +221,28 @@
             <h1 class="title is-1 ">PRISMLAYERS: Open Data for High-Quality Multi-Layer Transparent Image Generative Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Yifan_Pu1">Junwen Chen</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
+                <a href="https://www.microsoft.com/en-us/research/">Junwen Chen</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Yiming_Zhao3">Heyang Jiang</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
+                <a href="https://www.microsoft.com/en-us/research/">Heyang Jiang</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Zhicong_Tang1">Keming Wu</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
+                <a href="https://www.microsoft.com/en-us/research/">Keming Wu</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Yanbin Wang</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
+                <a href="https://openreview.net/profile?id=~Yanbin_Wang5">Yanbin Wang</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Ji Li</a>
+                <a href="https://www.microsoft.com/en-us/research/">Ji Li</a>
                 &nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Chao Zhang</a>
+                <a href="https://www.microsoft.com/en-us/research/">Chao Zhang</a>
                 &nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Haoxing_Ye1">Keiji Yanai</a>
+                <a href="https://www.microsoft.com/en-us/research/">Keiji Yanai</a>
                 &nbsp;&nbsp;&nbsp;
               </span>
               <span class="author-block">
