update arxiv & bib

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2502.18364" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2505.22523" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -568,10 +568,16 @@ suffix prompt scheme and the additional salient object matting to predict the ac
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-        @article{pu2025art,
+        <!-- @article{pu2025art,
           title={PRISMLAYERS: Open Data for High-Quality Multi-Layer Transparent Image Generative Models}, 
           author={Junwen Chen and Heyang Jiang and Keming Wu and Ji Li and Chao Zhang and Keiji Yanai and Dong Chen and Yuhui Yuan},
           journal={arXiv preprint arXiv:xxx},
+          year={2025},
+        } -->
+        @article{chen2025prismlayersopendatahighquality,
+          title={PrismLayers: Open Data for High-Quality Multi-Layer Transparent Image Generative Models}, 
+          author={Junwen Chen and Heyang Jiang and Yanbin Wang and Keming Wu and Ji Li and Chao Zhang and Keiji Yanai and Dong Chen and Yuhui Yuan},
+          journal={arXiv preprint arXiv:2505.22523},
           year={2025},
         }
       </code></pre>
