--- a/index.html
+++ b/index.html
@@ -292,11 +292,14 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="http://20.3.138.187:7860/" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
+                  <a href="https://huggingface.co/datasets/artplus/PrismLayersPro" class="external-link button is-normal is-rounded is-dark">
+<!--                     <span class="icon">
                       🚀
+                    </span> -->
+                    <span class="icon">
+                      <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em; vertical-align: middle;">
                     </span>
-                    <span>Demo</span>
+                    <span>Huggingface</span>
                   </a>
                 </span>
 
