--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://huggingface.co/datasets/artplus/PrismLayersPro" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://huggingface.co/datasets/artplus" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      🚀
+                      🤗
                     </span>
 <!--                     <span class="icon">
                       <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em; vertical-align: middle;">
@@ -559,7 +559,7 @@ suffix prompt scheme and the additional salient object matting to predict the ac
     <!-- width="1480px" height="650px"></iframe> -->
     <div class="iframe-container">  
       <!-- <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747829538673.svg"  -->
-      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747883526416.svg" 
+      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://github.com/prism-layers/prism-layers.github.io/blob/main/static/img/svg/000016451.svg" 
               width="1480px" height="1080"></iframe>
     </div>
     
