--- a/index.html
+++ b/index.html
@@ -558,9 +558,10 @@ suffix prompt scheme and the additional salient object matting to predict the ac
 
     <!-- width="1480px" height="650px"></iframe> -->
     <div class="iframe-container">  
-      <!-- <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/WYBar/gradiodemo_svg/main/1747829538673.svg"  -->
-      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://github.com/prism-layers/prism-layers.github.io/blob/main/static/img/svg/000016451.svg" 
+      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/prism-layers/prism-layers.github.io/main/static/img/svg/000016451_s1.svg" 
               width="1480px" height="1080"></iframe>
+      <!-- <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://fastly.jsdelivr.net/gh/prism-layers/prism-layers.github.io@main/static/img/svg/000016451_s1.svg" 
+              width="1480px" height="1080"></iframe> -->
     </div>
     
   </section>
