--- a/index.html
+++ b/index.html
@@ -549,19 +549,15 @@ suffix prompt scheme and the additional salient object matting to predict the ac
 
     <br>
     
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <!-- <h2 class="title is-3">Core Contribution</h2> -->
-        <h2 class="title is-3">Editable Demo</h2>
-      </div>
-    </div>
-
     <!-- width="1480px" height="650px"></iframe> -->
-    <div class="iframe-container">  
-      <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://raw.githubusercontent.com/prism-layers/prism-layers.github.io/main/static/img/svg/000016451_s1.svg" 
-              width="1480px" height="1080"></iframe>
-      <!-- <iframe src="https://svgedit.netlify.app/editor/index.html?storagePrompt=false&url=https://fastly.jsdelivr.net/gh/prism-layers/prism-layers.github.io@main/static/img/svg/000016451_s1.svg" 
-              width="1480px" height="1080"></iframe> -->
+    <div class="iframe-container" style="width: 100%; height: 1200px; border: 1px solid #ddd; border-radius: 8px;">
+      <iframe
+        src="https://unpkg.com/svgedit@latest/dist/editor/index.html?url=https://fastly.jsdelivr.net/gh/prism-layers/prism-layers.github.io@main/static/img/svg/000016451_s1.svg"
+        width="100%"
+        height="100%"
+        style="border: none;"
+        title="SVGEdit PrismLayers Demo">
+      </iframe>
     </div>
     
   </section>
