--- a/index.html
+++ b/index.html
@@ -550,6 +550,22 @@ suffix prompt scheme and the additional salient object matting to predict the ac
     <br>
     
     <!-- width="1480px" height="650px"></iframe> -->
+    <h2 class="title is-3" style="text-align: center;">Dataset Sample</h2>
+    <span style="display: block; text-align: left; font-size: 0.7em; margin-bottom: 10px;">
+      This is a neon graffiti style image. The image presents a vibrant and playful background in a bright blue hue, reminiscent of a clear sky. This cheerful backdrop sets a whimsical tone, enhancing the overall festive atmosphere of the composition. The blue is uniform, providing a striking contrast to the other elements that populate the scene.
+
+At the center of the image, a large, cartoonish crescent moon is depicted, featuring a textured surface that suggests depth and detail, with dark craters and a glossy finish. Surrounding the moon are fluffy, stylized clouds in varying shades of blue, which add a sense of lightness and playfulness to the scene. Scattered throughout the clouds are several cute, ghostly figures, each with a friendly expression. These ghosts are predominantly white with subtle pink accents, giving them a charming and non-threatening appearance. Their playful poses suggest movement, as if they are floating joyfully in the air.
+
+Adding to the whimsical nature of the image, small, colorful stars in shades of yellow, orange, and red are sprinkled around the moon and clouds. These stars enhance the magical feel of the scene, creating a sense of wonder and excitement.
+
+Prominently displayed at the bottom of the image is the text, "WHEN GHOSTS ARE IN FLIGHT, IT'S FRIGHT NIGHT!" The font is bold and playful, rendered in a bright yellow color that stands out against the blue background. The letters have a dripping effect, reminiscent of melting wax, which adds a fun, spooky touch appropriate for a Halloween theme. The text is large and centrally aligned, ensuring it captures the viewer's attention immediately.
+
+The artistic style of the image is cartoonish and cheerful, leaning towards a digital illustration aesthetic. The use of soft edges and bright colors contributes to a lighthearted and festive mood, making it suitable for a family-friendly Halloween celebration.
+
+The overall theme of the image is playful and festive, evoking feelings of joy and excitement associated with Halloween. The mood is light and fun, rather than scary, making it ideal for children or family-oriented events.
+
+In terms of symbolism, the ghosts represent the playful side of Halloween, while the crescent moon and stars evoke a sense of magic and wonder. This image could be effectively used for various contexts, such as Halloween party invitations, decorations, or social media posts aimed at celebrating the holiday in a fun and engaging way.
+    </span>
     <div class="iframe-container" style="width: 100%; height: 1200px; border: 1px solid #ddd; border-radius: 8px;">
       <iframe
         src="https://unpkg.com/svgedit@latest/dist/editor/index.html?url=https://fastly.jsdelivr.net/gh/prism-layers/prism-layers.github.io@main/static/img/svg/000016451_s1.svg"
